--- a/calculadora-react/src/components/Todo/Todo.css
+++ b/calculadora-react/src/components/Todo/Todo.css
@@ -61,8 +61,8 @@
     color: #6c757d;
 }
 
-.todo-list li button {
-    background-color: #dc3545;
+.todo-list li .delete-btn {
+    background-color: #e65362;
     color: white;
     border: none;
     border-radius: 4px;
@@ -70,6 +70,6 @@
     cursor: pointer;
 }
 
-.todo-list li button:hover {
+.todo-list li .delete-btn:hover {
     background-color: #c82333;
 }
